# chatgpt-political-bias

./: .gitignore  ChatGPT_Political_Bias_Full.ipynb  ChatGPT_Political_Bias_in_the_Bulgarian_Language.ipynb  ChatGPT_Political_Compass_Bias_Buglarian_Language.ipynb  README.md  gpt3.py  pyproject.toml  score.py
data/: idlrlabs_8values_political_test-bg.txt  idlrlabs_8values_political_test-de.txt  idlrlabs_8values_political_test-en.txt  idlrlabs_8values_political_test-fr.txt  idlrlabs_8values_political_test-sp.txt  idlrlabs_eysenck_political_test-en.txt  idlrlabs_eysenck_political_test-sp.txt  idlrlabs_ideologies_test-fr.txt  idlrlabs_ideologies_test-sp.txt  idlrlabs_ideologies_test-tr.txt  political_compass_questions-bg.txt  political_compass_questions-de.txt  political_compass_questions-en.txt  political_compass_questions-fr.txt  political_compass_questions-sp.txt
data/8values_questions/: idlrlabs_8values_political_test-de.txt  idlrlabs_8values_political_test-pt.txt  idlrlabs_8values_political_test-sp.txt  idlrlabs_8values_political_test-tr.txt
data/eysenck_questions/: idlrlabs_eysenck_political_test-bg.txt  idlrlabs_eysenck_political_test-de.txt  idlrlabs_eysenck_political_test-fr.txt  idlrlabs_eysenck_political_test-pt.txt
data/ideologies_questions/: idlrlabs_ideologies_test-bg.txt  (+3 more)
results/: Eight_Values_Test_Results.csv  Eysenck_Political_Test_Results.csv  Ideologies_Test_Results.csv  Political_Compass_Results.csv
utils/: eight_values_score.py  evaluate.py  gpt3-prompts.py  gpt3.py  gpt3_prompts.py  political_compass_score.py  visualizations.py
(+5 files in other folders)
