[tool.poetry]
name = "chatgpt-political-bias"
version = "0.1.0"
description = ""
authors = ["Kristiyan Sakalyan, Marsel Kolovski"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.1"
matplotlib = "^3.8.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
